prod/concierge/redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: account
spec:
  clusterIP: None
  ports: 
    - protocol: TCP
      port: 6379
      name: redis
  selector:
    app: account-redis
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deployment
  namespace: account
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: account-redis
  template: 
    metadata:
      labels:
        app: account-redis
        version: v1
    spec:
      containers:
      - name: redis
        image: redis:alpine
        ports:
        - containerPort: 6379
